Created Operate function which calls the appropriate operator function, depending on operator given.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<input type="text" id="inputText">
+<input type="text" id="inputText" value="2 + 2">
 <br>
 <button id="add">+</button>
 <button id="subtract">-</button>
