Further fleshed out calculator structure on the page. Added buttons for each numeral, operator, and equals sign.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="calculatorOuter">
 <input type="text" id="inputText" value="2 + 2">
 <br>
-<button id="add">+</button>
-<button id="subtract">-</button>
-<button id="multiply">*</button>    
-<button id="divide">/</button>
+<button id="1" class="calcButton">1</button>
+<button id="2" class="calcButton">2</button>
+<button id="3" class="calcButton">3</button>
+<button id="4" class="calcButton">4</button>
+<button id="5" class="calcButton">5</button>
+<button id="6" class="calcButton">6</button>
+<button id="7" class="calcButton">7</button>
+<button id="8" class="calcButton">8</button>
+<button id="9" class="calcButton">9</button>
+<button id="0" class="calcButton">0</button>
+
+<button id="add" class="calcButton">+</button>
+<button id="subtract" class="calcButton">-</button>
+<button id="multiply" class="calcButton">*</button>    
+<button id="divide" class="calcButton">/</button>
+<button id="equals" class="calcButton">=</button>
+    </div>
 </body>
 <script src="javascript.js"></script>
 </html>
