Added event listener for each button.  Testing by logging input into the console.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="calculatorOuter">
-<input type="text" id="inputText" value="2 + 2">
+<input type="text" id="inputText">
 <br>
 <button id="1" class="calcButton">1</button>
 <button id="2" class="calcButton">2</button>
