Operations now have basic functionality.  Clear button added.  Calculator works with expected inputs.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 <button id="9" class="calcButton">9</button>
 <button id="0" class="calcButton">0</button>
 
-<button id="add" class="calcButton">+</button>
-<button id="subtract" class="calcButton">-</button>
-<button id="multiply" class="calcButton">*</button>    
-<button id="divide" class="calcButton">/</button>
-<button id="equals" class="calcButton">=</button>
+<button id="+" class="calcButton">+</button>
+<button id="-" class="calcButton">-</button>
+<button id="*" class="calcButton">*</button>    
+<button id="/" class="calcButton">/</button>
+<button id="=" class="calcButton">=</button>
+<button id="clear" class="clearButton">Clear</button>
     </div>
 </body>
 <script src="javascript.js"></script>
